--- a/kisiselBilgiler.html
+++ b/kisiselBilgiler.html
@@ -350,7 +350,7 @@
                             <div class="row mb-5">
                                 <div class="col-12">
                                     <ul>
-                                        <li class="sayfa-ic-baslik">Profil</li>
+                                        <li class="sayfa-ic-baslik py-2">Profil</li>
                                         <li class="color-muted">
                                             Bazı bilgiler, Google hizmetlerini kullanan diğer kişiler tarafından
                                             görülebilir.
@@ -456,7 +456,7 @@
                             <div class="row mb-5">
                                 <div class="col-12">
                                     <ul>
-                                        <li class="sayfa-ic-baslik">İletişim bilgileri</li>
+                                        <li class="sayfa-ic-baslik py-2">İletişim bilgileri</li>
                                         <li class="color-muted">
                                             Bazı bilgiler, Google hizmetlerini kullanan diğer kişiler tarafından
                                             görülebilir.
@@ -504,7 +504,7 @@
                             <div class="row mb-5">
                                 <div class="col-12">
                                     <ul>
-                                        <li class="sayfa-ic-baslik">Hesap ülke ve Dili</li>
+                                        <li class="sayfa-ic-baslik py-2">Hesap ülke ve Dili</li>
                                         <li class="color-muted">
                                             Bazı bilgiler, Google hizmetlerini kullanan diğer kişiler tarafından
                                             görülebilir.
@@ -552,7 +552,7 @@
                             <div class="row mb-5">
                                 <div class="col-12">
                                     <ul>
-                                        <li class="sayfa-ic-baslik">Görünen web sitesi dili</li>
+                                        <li class="sayfa-ic-baslik py-2">Görünen web sitesi dili</li>
                                         <li class="color-muted">
                                             Web sitesini kullamak istediğiniz dili seçin.
                                             <a href="#" class="color-light">Daha fazla bilgi edinin</a>
@@ -584,7 +584,7 @@
                             <div class="row mb-5">
                                 <div class="col-12">
                                     <ul>
-                                        <li class="sayfa-ic-baslik">Adres bilgileri</li>
+                                        <li class="sayfa-ic-baslik py-2">Adres bilgileri</li>
                                         <li class="color-muted">
                                             Bu, yasal adrestir. Yasal adresi ayarlarda değiştirebilirsiniz.
                                         </li>
@@ -596,7 +596,7 @@
                                 <div class="col-12">
                                     <a href="#">
                                         <div class="row py-4 ml-0 option-area">
-                                            <div class="col-sm-3 color-muted px-0">
+                                            <div class="col-sm-3 color-muted px-0 py-1">
                                                 ADRES
                                             </div>
                                             <div class="col-sm-4 topic-black px-0">
@@ -625,7 +625,7 @@
                             <div class="row mb-5">
                                 <div class="col-12">
                                     <ul>
-                                        <li class="sayfa-ic-baslik">Ödeme yöntemleri</li>
+                                        <li class="sayfa-ic-baslik py-2">Ödeme yöntemleri</li>
                                         <li class="color-muted">
                                             Ödeme yöntemi ekleyin veya silin
                                         </li>
@@ -635,14 +635,14 @@
 
                             <div class="row option-area-hover">
                                 <div class="col-12">
-                                    <div class="row py-4 ml-0 option-area-no-after">
-                                        <div class="col-sm-3 color-muted px-0">
-                                            <div class="image-wrapper">
+                                    <div class="row option-area-no-after ml-0 mr-0 pr-0 py-3">
+                                        <div class="col-sm-2 color-muted px-0">
+                                            <div class="image-wrapper py-2">
                                                 <img src="images/visa-logo.svg" alt="visa">
                                             </div>
                                         </div>
 
-                                        <div class="col-sm-7 topic-black px-0">
+                                        <div class="col-6 offset-sm-1 topic-black px-0 py-2">
                                             <ul>
                                                 <li><span>Visa</span><span>****8417</span></li>
                                                 <li>Son kullanma tarihi:
@@ -651,9 +651,9 @@
                                             </ul>
                                         </div>
 
-                                        <div class="col-sm-2">
+                                        <div class="col-auto ml-auto">
                                             <a href="#">
-                                                <button class="topic-blue btn btn-block py-4 pl-4 ml-1 text-left">
+                                                <button class="topic-blue btn btn-block py-2">
                                                     Kaldır
                                                 </button>
                                             </a>
@@ -664,14 +664,14 @@
 
                             <div class="row option-area-hover">
                                 <div class="col-12">
-                                    <div class="row py-4 ml-0 option-area-no-after">
-                                        <div class="col-sm-3 color-muted px-0">
-                                            <div class="image-wrapper">
+                                    <div class="row option-area-no-after ml-0 mr-0 pr-0 py-3">
+                                        <div class="col-sm-2 color-muted px-0">
+                                            <div class="image-wrapper py-2">
                                                 <img src="images/mastercard-logo.svg" alt="mastercar">
                                             </div>
                                         </div>
 
-                                        <div class="col-sm-7 topic-black px-0">
+                                        <div class="col-6 offset-sm-1 topic-black px-0 py-2">
                                             <ul>
                                                 <li><span>Visa</span><span>****8417</span></li>
                                                 <li>Son kullanma tarihi:
@@ -680,9 +680,9 @@
                                             </ul>
                                         </div>
 
-                                        <div class="col-sm-2">
+                                        <div class="col-auto ml-auto">
                                             <a href="#">
-                                                <button class="topic-blue btn btn-block py-4 pl-4 ml-1 text-left">
+                                                <button class="topic-blue btn btn-block py-2">
                                                     Kaldır
                                                 </button>
                                             </a>
@@ -707,7 +707,7 @@
                             <div class="row mb-5">
                                 <div class="col-12">
                                     <ul>
-                                        <li class="sayfa-ic-baslik">Banka hesap bilgileri</li>
+                                        <li class="sayfa-ic-baslik py-2">Banka hesap bilgileri</li>
                                         <li class="color-muted">
                                             Banka hesap detaylarınız
                                         </li>
